--- a/app/src/main/res/layout/activity_last_detection.xml
+++ b/app/src/main/res/layout/activity_last_detection.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF5E7"
+    android:background="@drawable/back3"
     tools:context=".LastDetectionActivity">
 
     <!-- Header -->
