--- a/app/src/main/res/layout/activity_precautionary_measures2.xml
+++ b/app/src/main/res/layout/activity_precautionary_measures2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/appBackground"
+    android:background="@drawable/back3"
     android:padding="16dp">
 
     <TextView
@@ -50,6 +50,7 @@
         android:id="@+id/contentContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:backgroundTint="#ffb677"
         app:layout_constraintTop_toBottomOf="@id/switchButtonsContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
