--- a/app/src/main/res/layout/dialog_mute_unmute.xml
+++ b/app/src/main/res/layout/dialog_mute_unmute.xml
@@ -20,6 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Unmute"
-        android:backgroundTint="#FF8E3A"
+        android:backgroundTint="@color/orangeTheme"
         android:textColor="#FFFFFF" />
 </LinearLayout>
