--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,19 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mapsContainer"
     android:layout_width="match_parent"
-
+android:background="@drawable/back1"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/detectionInfo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
         android:text="Loading detection..."
-        android:textSize="16sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#000000"
         android:padding="16dp"
-        android:background="#EEEEEE"
+        android:background="@drawable/back1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
