--- a/app/src/main/res/layout/activity_recent_locations.xml
+++ b/app/src/main/res/layout/activity_recent_locations.xml
@@ -38,7 +38,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:src="@drawable/user_pic"
-            app:tint="@android:color/white"
+            app:tint="@color/primaryDark"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Recently Detected"
-            android:textColor="@android:color/white"
+            android:textColor="@color/primaryDark"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
