--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 
     <style name="Theme.WildWatch1" parent="Theme.Material3.DayNight.NoActionBar">
 
-        <item name="android:windowBackground">@drawable/splash_gradient</item>
+        <item name="android:windowBackground">@drawable/back1</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:statusBarColor">#FFA726</item> <!-- your orangeTheme -->
