--- a/app/src/main/res/layout/activity_notification_mgt.xml
+++ b/app/src/main/res/layout/activity_notification_mgt.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/orangeTheme"
         android:icon="@drawable/ic_hardware"
-        android:text="Mute/Unmute Sound"
+        android:text="Mute/Unmute Sound 🔊"
 
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -53,8 +53,7 @@
         android:layout_marginTop="16dp"
         android:icon="@drawable/ic_hardware"
         app:iconPadding="8dp"
-
-        android:text="Test Notification"
+        android:text="Test Notification 📩"
         android:textSize="16sp"
         app:cornerRadius="16dp"
         app:elevation="4dp"
@@ -69,7 +68,7 @@
         android:backgroundTint="@color/orangeTheme"
         android:textColor="@color/white"
         android:layout_height="wrap_content"
-        android:text="Test Data Sharing"
+        android:text="Test Data Sharing 📨"
         android:textSize="16sp"
         android:icon="@drawable/ic_hardware"
         app:iconPadding="8dp"
@@ -88,7 +87,7 @@
         android:backgroundTint="@color/orangeTheme"
         android:textColor="@color/white"
         android:layout_height="wrap_content"
-        android:text="Change Notification Timer (2 min)"
+        android:text="Change Notification Timer 🕰"
         android:textSize="16sp"
         android:icon="@drawable/ic_hardware"
         app:iconPadding="8dp"
