--- a/app/src/main/res/layout/activity_trend_analysis2.xml
+++ b/app/src/main/res/layout/activity_trend_analysis2.xml
@@ -51,7 +51,7 @@
             android:layout_height="55dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/primaryDark"
-            android:text="View Trend"
+            android:text="View Trend 🔬"
             android:textSize="20sp"
             android:textColor="@android:color/white"
             android:textAllCaps="false" />
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:backgroundTint="@color/primaryDark"
-            android:text="Generate Graph"
+            android:text="Generate Graph 📊"
             android:textSize="20sp"
             android:textColor="@android:color/white"
             android:textAllCaps="false" />
@@ -86,7 +86,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/primaryDark"
-            android:text="By Month"
+            android:text="By Month "
             android:textSize="17sp"
             android:textColor="@android:color/white"
             android:textAllCaps="false" />
@@ -96,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:backgroundTint="@color/primaryDark"
-            android:text="By Year"
+            android:text="By Year "
             android:textSize="17sp"
             android:textColor="@android:color/white"
             android:textAllCaps="false" />
