--- a/app/src/main/res/layout/activity_hardware_managment.xml
+++ b/app/src/main/res/layout/activity_hardware_managment.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="#FF8E3A"
-        android:text="Add Camera"
+        android:text="Add Camera 📸"
         android:textColor="#FFFFFF"
         android:textAllCaps="false"
         android:elevation="4dp"
