--- a/app/src/main/res/layout/activity_item_camera.xml
+++ b/app/src/main/res/layout/activity_item_camera.xml
@@ -60,7 +60,7 @@
             android:id="@+id/btnRemoveCamera"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Remove"
+            android:text="Remove 📕"
             android:textColor="@android:color/white"
             android:backgroundTint="@android:color/holo_red_dark"
             android:layout_marginTop="12dp"
