--- a/app/src/main/res/layout/activity_precautionary_measures2.xml
+++ b/app/src/main/res/layout/activity_precautionary_measures2.xml
@@ -36,14 +36,14 @@
             android:layout_marginEnd="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Text" />
+            android:text="Text 📝" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnVideos"
             style="@style/Widget.Button.Custom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Videos" />
+            android:text="Videos 📽" />
     </LinearLayout>
 
     <FrameLayout
